--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
 
   <div class="First">
-    <img src="D:\Web development\Git_hub\protfolio-1/ridwan-1.png" alt="">
+    <img src="ridwan-1.png" alt="">
   </div>
 
 </section>
