--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-<section>
+<section class="top-banner">
 
   <div class="First">
     <h1>  Hello!</h1>
     <h1>It's <span class="intro">Ridwan Hamid Khan</span></h1>
-    <h3>Professional Web-Developer</h3>
-    <p>Are you searching for a professional web developer for your desire website?? Dont be worried.Ridwan is here to help you.Btw you can call me "Pro dev".I'm very dedicated to my client.If you want to hire me,click the button bellow...</p>
+    <h2>Professional Web-Developer</h2>
+    <p>Are you searching for a professional web developer for your desire website?? Dont be worried.Ridwan is here to help you.Btw you can call me "Pro dev".If you want to hire me,click the button bellow...</p>
     <a class="button" target="_blank"  href="https://www.linkedin.com/in/ridwan-hamid-khan-24450a241/">Need Me?</a>
   </div>
 
@@ -25,6 +25,20 @@
     <img src="ridwan-1.png" alt="">
   </div>
 
+</section>
+
+<section class="Me">    
+
+<div class="First">
+  <img class="second-img" src="cox-flex.png" alt="">
+</div>
+
+<div class="First">
+<h2>Why Me</h2>
+
+<p>I'm very dedicated to my client.I'm also determined to finish my work in all circumstances.Tag line that I used to believe,</p>
+ <p> <span class="tag-line">"Your website , My responsiblity".</span></p>
+ </div>
 </section>
     
 </body>
