--- a/index.html
+++ b/index.html
@@ -1,45 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ridwan the pro Web-Dev</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ridwan the pro Web-Dev</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap" rel="stylesheet">
 </head>
+
 <body>
-<section class="top-banner">
+  <section class="top-banner">
 
-  <div class="First">
-    <h1>  Hello!</h1>
-    <h1>It's <span class="intro">Ridwan Hamid Khan</span></h1>
-    <h2>Professional Web-Developer</h2>
-    <p>Are you searching for a professional web developer for your desire website?? Dont be worried.Ridwan is here to help you.Btw you can call me "Pro dev".If you want to hire me,click the button bellow...</p>
-    <a class="button" target="_blank"  href="https://www.linkedin.com/in/ridwan-hamid-khan-24450a241/">Need Me?</a>
+    <div class="First">
+      <h1 class="hello"> Hello!</h1>
+      <h1>It's <span class="intro">Ridwan Hamid Khan</span></h1>
+      <h2>Professional Web-Developer</h2>
+      <p>Are you searching for a professional web developer for your desire website?? Dont be worried.Ridwan is here to
+        help you.Btw you can call me "Pro dev".If you want to hire me,click the button bellow...</p>
+      <a class="button" target="_blank" href="https://www.linkedin.com/in/ridwan-hamid-khan-24450a241/">Need Me?</a>
+    </div>
+
+    <div class="First">
+      <img src="ridwan-1.png" alt="">
+    </div>
+
+  </section>
+
+  <section class="Me">
+
+    <div class="First">
+      <img class="second-img" src="cox-flex.png" alt="">
+    </div>
+
+    <div class="First">
+      <h2>Why Me</h2>
+      <p>I'm very dedicated to my client.I'm also determined to finish my work in all circumstances.Tag line that I used
+        to believe,</p>
+      <p> <span class="tag-line">"Your website , My responsiblity".</span></p>
+
+      <a class="button" href="https://www.facebook.com/rh.khan.3705">FaceBook</a>
+    </div>
+  </section>
+ 
+<section class="Last">
+  <h2 class="bold">Experiences</h2>
+  <div id="one" class="First box">
+    <h2>Beginner Developer</h2>
+    <h3>2020-2022</h3>
+    <p>From 2020 to 2022 I have struggled a lot and learn so many things about web development.I have followed
+      ,Jhankar Mahbub's course of web dev which helps me a lot as a beginner developer and also becoming a pro
+      developer.</p>
   </div>
 
-  <div class="First">
-    <img src="ridwan-1.png" alt="">
+  <div id="two" class="First box">
+    <h2>Pro Developer</h2>
+    <h3>2022-Present</h3>
+    <p>After almost two years hard work and gathering so many experiences, I have been working as a Pro developer since 2022.I have sussessfully done so many projects.Feedback from my clients inspire me for my next step.</p>
   </div>
-
 </section>
-
-<section class="Me">    
-
-<div class="First">
-  <img class="second-img" src="cox-flex.png" alt="">
-</div>
-
-<div class="First">
-<h2>Why Me</h2>
-
-<p>I'm very dedicated to my client.I'm also determined to finish my work in all circumstances.Tag line that I used to believe,</p>
- <p> <span class="tag-line">"Your website , My responsiblity".</span></p>
- </div>
-</section>
-    
 </body>
+
+<footer>
+<p>© Ridwan Hamid khan | All rights reserved.</p>
+</footer>
+
 </html>
